# techbookfes8_flux

./: .gitignore  README.md  build.gradle
gradle/wrapper/: gradle-wrapper.properties
mobile/: CMakeLists.txt  build.gradle
mobile/src/androidTest/java/jp/digital/future/wearSupporter/: ExampleInstrumentedTest.kt
mobile/src/debug/java/jp/digital/future/wearSupporter/data/: DataModule.kt  GithubLoginModule.kt
mobile/src/debug/java/jp/digital/future/wearSupporter/di/: AppModule.kt  DebugAppLifecycleCallbacks.kt
mobile/src/main/: AndroidManifest.xml
mobile/src/main/cpp/header/: main.hpp
mobile/src/main/cpp/source/: jni.cpp
mobile/src/main/java/jp/digital/future/wearSupporter/: App.kt  AppLifecycleCallbacks.kt  GithubActivity.kt
mobile/src/main/java/jp/digital/future/wearSupporter/data/api/: GithubLoginService.kt  GithubService.kt
mobile/src/main/java/jp/digital/future/wearSupporter/data/entity/: GithubLogin.kt  GithubSubmitToken.kt  Readme.kt  Repo.kt
mobile/src/main/java/jp/digital/future/wearSupporter/data/repository/: GitHubRepository.kt  IntentRepository.kt  PreferenceRepository.kt
mobile/src/main/java/jp/digital/future/wearSupporter/di/: AppComponent.kt  AutoInjector.kt  PerActivityScope.kt  StoreProvider.kt  UiModule.kt  ViewModelFactory.kt  ViewModelKey.kt
mobile/src/main/java/jp/digital/future/wearSupporter/di/modules/: GithubModule.kt
mobile/src/main/java/jp/digital/future/wearSupporter/flux/: Action.kt  Dispatcher.kt  Store.kt
mobile/src/main/java/jp/digital/future/wearSupporter/flux/action/: GithubAction.kt
mobile/src/main/java/jp/digital/future/wearSupporter/flux/creator/: GithubActionCreator.kt
mobile/src/main/java/jp/digital/future/wearSupporter/flux/dispatcher/: GithubDispatcher.kt
mobile/src/main/java/jp/digital/future/wearSupporter/flux/store/: GithubStore.kt
mobile/src/main/java/jp/digital/future/wearSupporter/util/: Message.java  Messenger.kt  PARAMATER.kt  SharedPreferenceExtension.kt
mobile/src/main/java/jp/digital/future/wearSupporter/util/ext/: ArchitectureComponentsExt.kt  LiveDataReactiveStreamsExt.kt
mobile/src/main/res/layout/: activity_github.xml  activity_mobile_main.xml
mobile/src/main/res/values/: strings.xml
mobile/src/test/java/jp/digital/future/wearSupporter/: ExampleUnitTest.kt
wear/: build.gradle
wear/src/main/: AndroidManifest.xml
(+64 files in other folders)
